feat: implement user search functionality; create search users endpoint with pagination and filtering, refactor change club director to change principal, and update related DTOs and queries
